# TensorRT

./: readme.md
ONNX2TensorRT/: CMakeLists.txt  model.onnx  model.trt  pytorch2ONNX2TensorRT.cpp  pytorch2ONNX2TensorRT.py  readme.md
ONNX2TensorRT/include/include/: NvInferPlugin.h
ONNX2TensorRT/include/samples/: Makefile
ONNX2TensorRT/include/samples/python/detectron2/: infer.py  requirements.txt
TensorRT_runtime/: CMakeLists.txt  model.engine  pythonAPI_runtime.py
TensorRT_runtime/include/samples/: Makefile.config
TensorRT_runtime/include/samples/python/detectron2/: README.md
TensorRT_runtime/include/samples/sampleNamedDimensions/: Makefile
TensorRT_runtime/include/samples/sampleOnnxMnistCoordConvAC/: Makefile  modify_onnx_ac.py
实战案例1/: .gitignore  CMakeLists.txt  Cppshizhan.cpp  ONNXRuntime_Val.py  TensorRT_Runtime.py
实战案例1/include/samples/python/detectron2/: build_engine.py
实战案例1/include/samples/python/tensorflow_object_detection_api/: infer.py
实战案例1/include/samples/sampleIOFormats/: Makefile
直接构建/: C++_API_tensorRT.cpp  python_API_tensorRT.py
